--- a/2.HTML/index.html
+++ b/2.HTML/index.html
@@ -3,16 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diplomado</title>
-    <script></script>
+    <title>Diplomado.index</title>
+    <link rel="stylesheet"href="">
+    <style>
+        body{
+    background-color: hsl(234, 57%, 65%);
+        }
+    </style>
 </head>
 <body>
-    <h1>Titulo: Hola mundo</h1>
-    <h2> Subtitulo: primeras practicas</h2>
-    <p>Esto es un pequeño parrafo con la etique p</p>
-    <div>Es una división es una etiqueta distinta</div>
-    <b>Enlace</b>
-    <a href="https://www.frontendmentor.io/> Website</a>
+    <h1>Titulo con h1</h1>
+    <h2>Subtitulo con h2</h2>
+    <h3>Tiutlo 3 con h3</h3>
+    <p>Parrafo con la etique p</p>
+    <div>Esta es una división</div>
+    <a href="http://www.google.com.co" target="_blank">enlace</a>
+    <a href="./formulario.html" target="_blank">Formulario</a>
+    <!--- <b>Enlace</b> -->
     <table align="center" border="1">
         <tr>
             <td>Fila 1</td>
