Commit: Clase 7 HTML

--- a/2.HTML/formulario1.html
+++ b/2.HTML/formulario1.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DiplomadoFormulario</title>
-    <link rel="stylesheet" href="./estilos/formulario.css"/> 
+    <link rel="stylesheet" href="./estilos/estilos.css"/> 
 </head>
 <body>
-    <div class="container">
+    <div id="contenedor">
         <form action="./index.html">
             <!-- Las etiquetas se hacen con un label-->
-             <div class="form-group">
-                <h4 id="contact-us">Contacto</h4>
-                <div class="form-item">
+             <div>
+                <div>
                     <label class="color-label letra-grande" for="">First Name*:</label>
                     <input type="text">
                 </div>
-                <div class="form-item">
+                <div>
                     <label class="color-label">Last Name*:</label>
                     <input type="text">
                 </div>
@@ -28,7 +27,7 @@
              <input type="checkbox"/>Support request
              <label for="">Message *</label>
              <textarea name=""id=""></textarea>
-             <input type="checkbox"/>Accept
+             <input type="checkbox"/> Accept
             <input type="submit"/>
         </form> <!-- Etiqueta que envia los datos a x lugar-->
     </div>
