--- a/2.HTML/formulario.html
+++ b/2.HTML/formulario.html
@@ -10,10 +10,10 @@
     <div class="container">
         <form action="./index.html">
             <!-- Las etiquetas se hacen con un label-->
-             <div class="form-group">
-                <h4 id="contact-us">Contacto</h4>
+            <h4 id="contact-us">Contacto</h4> 
+            <div class="form-group">
                 <div class="form-item">
-                    <label class="color-label letra-grande" for="">First Name*:</label>
+                    <label class="color-label" for="">First Name*:</label>
                     <input type="text">
                 </div>
                 <div class="form-item">
@@ -21,15 +21,24 @@
                     <input type="text">
                 </div>
              </div>
-             <label id="email" for="">Email Address:</label>
-             <input type="text">
+             <label for="">Email Adress *</label>
+             <input id="email" type="text" />
              <label for="">Query type*</label>
-             <input type="checkbox"/>General Enquiry
-             <input type="checkbox"/>Support request
-             <label for="">Message *</label>
-             <textarea name=""id=""></textarea>
-             <input type="checkbox"/>Accept
-            <input type="submit"/>
+             <div class="radio-group">
+               <label for="">
+                 <input name="dato" type="radio" value="1" required />opcion1
+               </label>
+               <label for="">
+                 <input name="dato" required value="2" type="radio" />opcion 2
+               </label>
+             </div>
+             <label for="">Message</label>
+             <textarea name="" id=""></textarea>
+             <div class="checkbox-group">
+               <input type="checkbox" id="consent" name="consent" required />
+               <label for="consent">aceptar</label>
+             </div>
+             <input type="submit" />
         </form> <!-- Etiqueta que envia los datos a x lugar-->
     </div>
 </body>
